Prometheus/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: prometheus
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.tomer-aws-project.online
  rules:
  - host: prometheus.tomer-aws-project.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              name: http
